# AGPS

./: .gitignore  README.md
conception/: archi.puml  archi_v1.excalidraw  hedging.puml
src/PricerEngine/: .gitignore  CMakeLists.txt  README.md  pricing_server.cpp
src/PricerEngine/Options/: Option.hpp
src/PricerEngine/model/: BlackScholesModel.cpp  BlackScholesModel.hpp
src/PricerEngine/pricer/: pricer.cpp  pricer.hpp
src/PricerEngine/src/: CMakeLists.txt  Currency.cpp  Currency.hpp  GlobalModel.cpp  GlobalModel.hpp  InterestRateModel.cpp  InterestRateModel.hpp  MonteCarlo.cpp  MonteCarlo.hpp  Option.cpp  Option.hpp  RiskyAsset.cpp  RiskyAsset.hpp  RiskyDynamics.cpp  RiskyDynamics.hpp  TimeGrid.cpp  TimeGrid.hpp  launch.sh  main.cpp  output.txt  pricing.grpc.pb.cc  pricing.grpc.pb.h  pricing.pb.cc  pricing.pb.h  pricing.proto  pricing_server.cpp  script.py  test.cpp
src/PricerEngine/src/lib/: libpnl.so.1.15.0
src/backend/: .gitignore  .pylintrc  Makefile  README.md  app.py  hedger.py  instances.py  main.py  package.json  requirements.txt  server.py
src/backend/API/: .cool.py.un~
src/backend/API/controllers/: hedge_controller.py  market_controller.py
src/backend/API/models/: NextDayRequest.py  PortfolioDataRequest.py
src/backend/HedgingEngine/: README.md
src/backend/HedgingEngine/FinancialEstimator/: CorrelationMatrixEstimator.py  FinancialEstimator.py  RiskFreeRateEstimator.py  VolatilityEstimator.py
src/backend/HedgingEngine/FinancialParam/: Asset.py  AssetDescription.py  Currency.py  DataFeed.py  FinancialParam.py  FinancialParams.py  FormuleDescription.py  ListDataFeed.py  TimeGrid.py
src/backend/HedgingEngine/Hedging/: Hedger.py
src/backend/HedgingEngine/MarkatDataReader/: DataFeed.py  EnumCurrency.py  EnumIndex.py  ExchangeRate.py  ExchangeRateHistory.py  ExchangeRateList.py  GenericHistory.py  GenericList.py  IndexPrice.py  IndexPriceHistory.py  IndexPriceList.py  InterestRate.py  InterestRateHistory.py  InterestRateList.py  ListOutputData.py  MarketDataReader.py  OutputData.py
src/backend/HedgingEngine/Portfolio/: Portfolio.py  PortfolioData.py
src/backend/HedgingEngine/Pricer/: Pricer.py  PricerGrpc.py  PricingParams.py  PricingResults.py  pricing_pb2.py  pricing_pb2_grpc.py
src/backend/HedgingEngine/Rebalacing/: FixedRebalacing.py  GridRebalancing.py  Rebalacing.py
src/backend/HedgingEngine/Utils/: MathDateConverter.py
src/backend/tests/: pytest_report.txt  run_all_test.sh  test_data_feed.py  test_enum_index.py  test_exchange_rate_history.py  test_financial_params.py  test_market_data_reader.py  test_market_reader_exchange_rate.py  test_market_reader_get_data_feed.py  test_market_reader_index_price.py  test_market_reader_interset_rate.py  test_pricer_grpc.py  test_pricer_grpc_hello_world.py  tests.py  valide_market_data_reader.ipynb
src/backend/tests/API/: test_api.py
src/backend/tests/FinancialEstimator/: test_FinancialEstimator.py  (+4 more)
src/backend/tests/Pricer/serverCpp/: CMakeLists.txt  README.md  pricing.proto  server.cpp
src/frontend/: README.md  package-lock.json  package.json  script.py
src/frontend/server/: index.js
src/frontend/src/: .cool.py.un~  App.jsx  cool.py  front.txt  index.css  main.jsx  resultat.txt
tests/: DonneesGPS2025.csv  data.csv  data.xlsx  hedger_ancien_version.py  main.ipynb
tests/grpc/: README.md  client.py  server.py  service.proto  service_pb2.py  service_pb2_grpc.py
tests/grpc_cpp/src/: pricing.proto  pricing_server.cpp
(+38 files in other folders)
